--- a/gatsby/package.json
+++ b/gatsby/package.json
@@ -37,7 +37,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "@react-buddy/ide-toolbox": "^2.2.0"
   },
   "devDependencies": {
     "babel-eslint": "^10.1.0",
